$Id$

2001.05.17
  * add GRange.ruler
  * improve lablgladecc, support all widgets

2001.05.16
  * add lablgladecc, a libglade wrapper compiler

2001.04.16
  * clipping patch by Michael Welsh

2001.03.13
  * support GTK 1.2.3

2001.03.12
  * released 1.2.0
  * merged in variance annotations
  * added gears example by Eric Cooper

2001.02.27
  * add extractors to Gdk.Image
  * slight API change in GDraw.drawing#put_{image,pixmap}

2001.02.21
  * add size-allocate signal

2001.02.15
  * changed directory structure: sources moved to src/
  * updated Makefile.nt, made Win32 port work with gtk-1.3 of 2000-12-26
  * remove gutter_size in GtkPack.Paned, since it disappeared in 1.3

2001.02.13
  * relax some types in Gdk.Window, to allow all drawables
  * support for (dangerous?) callbacks in libglade

2001.02.10
  * added preliminary support for libglade

2000.12.20
  * add Filesection.complete (Sven Luther's patch)

2000.12.07
  * merge wakita's patch for gdk_draw_pixmap
    rename GDraw.drawable#image/pixmap to #put_image/put_pixma

2000.11.29
  * remove unison port, since unison already works with this snapshot

2000.11.16
  * internal change: switch from var2def/var2conv to varcc,
    and split ml_gtk.c in smaller files

2000.8.29
  * bugs in color selection reported by Nicolas George
  * changed the license

2000.8.21
  * correct GtkStyle.set_font bug reported by Patrick Doane

2000.7.27
  * changed GUtil.signal and GUtil.variable for better usability
  * suppressed obsolete color settings in tooltips

2000.6.19
  * patch by Michael Welsh for Gdk regions

2000.6.15
  * add CList.set_cell_style/set_row_style
  * change set_usize/set_uposition into set_geometry
  * return an option rather than raise an exception for null pointers
  * map empty strings to NULL when meaningful
  * Gdk.Font.get_type/ascent/descent

2000.6.14
  * add GDraw.optcolor for functions with a default (Jerome suggested)

2000.6.8
  * apply Jerome Vouillon's patch