@@ -3,6 +3,7 @@ $Id$
 2001.05.17
   * add GRange.ruler
   * improve lablgladecc, support all widgets
+  * add -root and -embed flags to lablgladecc
 
 2001.05.16
   * add lablgladecc, a libglade wrapper compiler
